Sun Aug 31 14:27:27 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_last_error): new method.

Sun Aug 31 14:17:34 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_primitive_convert): make two arguments,
	  destination_byteoffset and destination_bytesize, optional.

Sun Aug 31 14:12:06 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (make_econv_exception): error message simplified.

Sun Aug 31 13:47:59 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/coverage/coverage.c (rb_mCoverage): removed unneeded static variable.

	* ext/socket/socket.c (unix_recv_io): ditto.

	* ext/socket/socket.c (mConst): ditto.

Sun Aug 31 13:45:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_ocsp.c (ossl_ocspres_initialize): fix for
	  initialization of r18168.

Sun Aug 31 13:42:39 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/ripper/eventids2.c (ripper_init_eventids2): use rb_intern_const.

	* ext/ripper/tools/generate.rb (generate_eventids1): ditto.

	* ext/ripper/tools/generate.rb (generate_eventids2_table): ditto.

Sun Aug 31 12:56:00 2008  Tanaka Akira  <akr@fsij.org>

	* ext/dl/mkcallback.rb (rb_dl_init_callbacks): fix indent.

Sun Aug 31 11:39:21 2008  Tanaka Akira  <akr@fsij.org>

	* ext/strscan/strscan.c (strscan_do_scan): fix usecnt decrement.

Sun Aug 31 04:38:47 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_putback): make max argument optional.

Sun Aug 31 04:35:21 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (rb_econv_putback): putback from last byte.

Sun Aug 31 04:27:04 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_putback): renamed from econv_primitive_putback.

Sun Aug 31 04:22:51 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_insert_output): renamed from
	  econv_primitive_insert_output.

Sun Aug 31 04:20:46 2008  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_econv.rb: follow econv_primitive_errinfo change.

Sun Aug 31 03:44:24 2008  Tanaka Akira  <akr@fsij.org>
